--- a/package.json
+++ b/package.json
@@ -9,19 +9,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.4",
-    "react": "^19.2.4",
     "@google/genai": "^1.40.0",
-    "lucide-react": "^0.563.0",
-    "html-to-image": "^1.11.13",
-    "reactflow": "^11.11.4",
     "dagre": "0.8.5",
+    "html-to-image": "^1.11.13",
+    "lucide-react": "^0.563.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-markdown": "9.0.1",
+    "reactflow": "^11.11.4",
     "remark-gfm": "4.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.4.24",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
